--- a/css/style.css
+++ b/css/style.css
@@ -88,15 +88,25 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     #fill1{
       width:780px;
       height:450px;
+      overflow:hidden;
       /*height:1000px;*/
       /*background:url(../img/fill1.jpg) no-repeat center 0 ;*/
     }
       #fill1 div{
         position:absolute;
       }
-        #fill1-scissor{ width:49px; height:61px; background:url(../img/fill1-scissor.png) no-repeat top left; }
+        #fill1-scissor{
+          width:49px; height:61px; background:url(../img/fill1-scissor.png) no-repeat top left;
 
-        #fill1-dashedline{ width:780px; height:450px; background:url(../img/fill1-dashedline.png) no-repeat top left; }
+          top:-30px;
+          left:44%;
+          z-index:20;
+       }
+
+        #fill1-dashedline{
+          width:780px; height:450px; background:url(../img/fill1-dashedline.png) no-repeat top left;
+          z-index:10;
+        }
 
         #fill1-shapes2{ width:780px; height:450px;background:url(../img/fill1-shapes2.png) no-repeat 50% 14px; }
 
