--- a/css/style.css
+++ b/css/style.css
@@ -85,18 +85,31 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       position:relative;
       z-index:10;
     }
+      div.fillmask{
+        width:780px;
+        height:100px;
+        z-index:30;
+        position:absolute;
+        background:url(../img/fillmask.png) no-repeat center 0 ;
+      }
+
     #fill1{
       width:780px;
       height:450px;
       overflow:hidden;
-      /*height:1000px;*/
-      /*background:url(../img/fill1.jpg) no-repeat center 0 ;*/
     }
+      #fill1 .fillmask{
+        z-index:30;
+        margin-top:350px;
+      }
+
       #fill1 div{
         position:absolute;
       }
         #fill1-scissor{
-          width:49px; height:61px; background:url(../img/fill1-scissor.png) no-repeat top left;
+          width:49px; 
+          height:61px; 
+          background:url(../img/fill1-scissor.png) no-repeat top left;
 
           top:-30px;
           left:44%;
@@ -104,26 +117,85 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
        }
 
         #fill1-dashedline{
-          width:780px; height:450px; background:url(../img/fill1-dashedline.png) no-repeat top left;
+          width:780px; 
+          height:450px; 
+          background:url(../img/fill1-dashedline.png) no-repeat top left;
           z-index:10;
         }
 
-        #fill1-shapes2{ width:780px; height:450px;background:url(../img/fill1-shapes2.png) no-repeat 50% 14px; }
-
-        #fill1-shapes1{ width:780px; height:450px; background:url(../img/fill1-shapes1.png) no-repeat 50% 67px;}
+        #fill1-shapes2{ 
+          width:780px; 
+          height:450px;
+          background:url(../img/fill1-shapes2.png) no-repeat 50% 14px; 
+        }
+        #fill1-shapes1{ 
+          width:780px; 
+          height:450px;
+          background:url(../img/fill1-shapes1.png) no-repeat 50% 67px;
+        }
 
     #fill2{
       margin-top:-50px;
       width:780px;
       height:530px;
-      background:url(../img/fill2.jpg) no-repeat center top ;
+/*      background:url(../img/fill2.jpg) no-repeat center top ;*/
     }
+      #fill2 .fillmask{
+        margin-top:460px;
+      }
+
+      #fill2 div{
+        position:absolute;
+      }
+      #fill2-lines{
+        z-index:10;
+        width:780px; 
+        height:560px;
+        background:url(../img/fill2-lines.jpg) no-repeat 50% 1px;
+      }
+      #fill2-comb{
+        z-index:20;
+        width:238px;
+        width:780px;
+        height:59px;
+        height:560px;
+        background:url(../img/fill2-comb.png) no-repeat 60% -100px;
+      }
+
+
     #fill3{
       margin-top:-50px;
       width:780px;
       height:690px;
-      background:url(../img/fill3.jpg) no-repeat center top ;
+      background:url(../img/fill3.jpg) no-repeat 50% -340px;
     }
+      #pricetags div{ position:absolute; }
+
+      #fill3 .fillmask{
+        margin-top:590px;
+        /*border:thin solid red;*/
+      }
+      #fill3-care{
+        width:148px;
+        height:148px;
+        background:url(../img/fill3-care.png) no-repeat center top;
+        margin-left: 168px;
+        margin-top: 62px;
+      }
+      #fill3-styling{
+        width:126px;
+        height:125px;
+        background:url(../img/fill3-styling.png) no-repeat center top;
+        margin-left: 28px;
+        margin-top: 25px;
+      }
+      #fill3-circles{
+        width:380px;
+        height:270px;
+        background:url(../img/fill3-circles.png) no-repeat center top;
+        margin-left: 10px;
+        margin-top: 10px;
+      }
 
     #fill4{
       width:780px;
@@ -147,9 +219,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     #producten{
       height:1303px; /* 613 + 690 */
     }
-    #producten .wrap{
-
-    }
+ 
     #locatie{
       height:1100px; /* 690 + 410 */
     }
@@ -235,7 +305,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
   #pricedata{
     background:url(../img/block.png) no-repeat top left;
     width:704px; /* 784 */
-    height:383px; /* 423 */
+    height:343px; /* 423 */
     padding:40px;
     margin:40px 0 0 0;
   }
@@ -301,18 +371,27 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     background:url(../img/products-foot.png) repeat-x bottom left;
     padding-bottom:20px;
   }
-  #products{
-    margin-top:40px;
-    padding-bottom:20px;
-  }
-  #pricetags{
-    position:relative;
-    float:left;
-  }
-  #hairproducts{
-    position:relative;
-    float:right;
-  }
+    #producten .wrap{
+      width:960px;
+      overflow: hidden;
+    }
+    #producten p{ width: 550px; }
+    #products{
+      margin-top:40px;
+      padding-bottom:20px;
+      height:350px;
+      width:780px;
+      overflow:hidden;
+    }
+    #pricetags{
+      position:relative;
+      margin-left:120px;
+    }
+    #hairproducts{
+      position:absolute;
+      z-index:30;
+    }
+
 /* =Locatie
   *****************************************************************************/
 
