--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       background-color:#fff;
     }
     #access a.link-active{
-      background-color:#e2e2e2;
+      color:#FD6A00;
     }
 
   #access.sticky{
@@ -137,11 +137,11 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     #fill2{
       margin-top:-50px;
       width:780px;
-      height:530px;
+      height:830px;
 /*      background:url(../img/fill2.jpg) no-repeat center top ;*/
     }
       #fill2 .fillmask{
-        margin-top:460px;
+        margin-top:760px;
       }
 
       #fill2 div{
@@ -150,15 +150,13 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       #fill2-lines{
         z-index:10;
         width:780px; 
-        height:560px;
+        height:860px;
         background:url(../img/fill2-lines.jpg) no-repeat 50% 1px;
       }
       #fill2-comb{
         z-index:20;
-        width:238px;
         width:780px;
-        height:59px;
-        height:560px;
+        height:860px;
         background:url(../img/fill2-comb.png) no-repeat 60% -100px;
       }
 
@@ -166,7 +164,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     #fill3{
       margin-top:-50px;
       width:780px;
-      height:690px;
+      height:710px;
       background:url(../img/fill3.jpg) no-repeat 50% -340px;
     }
       #pricetags div{ position:absolute; }
@@ -199,9 +197,34 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
 
     #fill4{
       width:780px;
-      height:410px;
+      height:890px;
       background:url(../img/fill4.jpg) no-repeat center top ;
     }
+      #fill4 div{ position: absolute; }
+      #fill4 .fillmask{
+        z-index:30;
+        margin-top:490px;
+      }
+      #fill4-circle1{
+        width:780px;
+        height:590px;        
+        background:url(../img/fill4-circle1.png) no-repeat 80px 170px;
+      }
+      #fill4-circle2{
+        width:780px;
+        height:590px;        
+        background:url(../img/fill4-circle2.png) no-repeat 530px 80px;
+      }
+      #fill4-circleblur{
+        width:780px;
+        height:590px;
+        background:url(../img/fill4-circleblur.png) no-repeat center top ;
+      }
+      #fill4-circlesharp{
+        width:780px;
+        height:590px;
+        background:url(../img/fill4-circlesharp.png) no-repeat center top ;
+      }
 
     #overons{
       height:820px; /* 370 + 450 */
@@ -209,7 +232,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
 
     /* fixed heights */
     #prijzen{
-      height:1246px;/* 716 + 530 */
+      height:1546px;/* 716 + 530 */
 
       z-index:20;
     }
@@ -221,12 +244,15 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     }
  
     #locatie{
-      height:1100px; /* 690 + 410 */
+      height:1400px; /* 690 + 410 */
     }
     #locatie .wrap{ }
+    #locatie .content{
+      height:660px;
+    }
 
     #contact{
-      height:1370px;
+      height:970px;
     }
 
 
@@ -482,6 +508,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
   footer{
     background-color:#f1f1f1;
     padding-top:80px;
+    background:#f2f2f2 url(../img/footer-shadow.jpg) no-repeat 50% 25px;
   }
   footer p{
     text-align:center;
