--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,29 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     border-top:8px solid #f1f1f1;
   }
 
-
   .wrap{ width:780px; margin:0 auto;}
 
   #logo{
     width:240px;
     margin:20px auto;
+  }
+  .js #wrap{
+    opacity:0;
+  }
+  .js #loading{
+    width:100%;
+    height:100%;
+    position: absolute;
+    top:0;
+    left:0;
+    background-color:#f5f5f5;
+  }
+
+  .wf-loading {
+    visibility: hidden;
+  }
+  .wf-active{
+    visibility: visible;
   }
 
 /* =Navigation
@@ -38,7 +55,9 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     width:100%;
     text-align:center;
     border-top:1px solid #dfdfe1;
+    border-bottom:1px solid #dfdfe1;
     box-shadow:1px 0 5px rgba(0,0,0,0.3);
+
     z-index:50;
     position:relative;
   }
@@ -462,7 +481,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     .hasmap #mapcanvas{ background-image:none; }
 
     aside{
-      background:rgba(255,255,255,0.8);
+      background:url(../img/mapaside-trans.png) repeat;
       width:200px;
       height:337px;
       padding:20px;
@@ -489,6 +508,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     }
     aside address{
       font-style:normal;
+      font-size:15px;
     }
 
 /* =Contact
