--- a/css/style.less
+++ b/css/style.less
@@ -7,7 +7,6 @@
  ******************************************************************************/
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif;color:#222}body{margin:0;font-size:1em;line-height:1.4}::-moz-selection{background:#fd6a00;color:#fff;text-shadow:none}::selection{background:#fd6a00;color:#fff;text-shadow:none}a{color:#fd6a00}a:visited{color:#fd6a00}a:hover{color:#e86100}a:focus{outline:thin dotted}a:hover,a:active{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}ins{background:#ff9;color:#000;text-decoration:none}mark{background:#ff0;color:#000;font-style:italic;font-weight:bold}pre,code,kbd,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:"";content:none}small{font-size:85%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}ul,ol{margin:1em 0;padding:0 0 0 40px}dd{margin:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none;margin:0;padding:0}img{border:0;-ms-interpolation-mode:bicubic;vertical-align:middle}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:0;margin:0;padding:0}label{cursor:pointer}legend{border:0;*margin-left:-7px;padding:0;white-space:normal}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button;*overflow:visible}button[disabled],input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*width:13px;*height:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top;resize:vertical}input:invalid,textarea:invalid{background-color:#f0dddd}table{border-collapse:collapse;border-spacing:0}td{vertical-align:top}
 
-
 /* =============================================================================
    Chrome Frame Prompt
    ========================================================================== */
@@ -370,46 +369,89 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
 
     }
 
-  #pricedata{
-    background:url(../img/priceblock.png) no-repeat top left;
-    width:704px; /* 784 */
-    height:453px; /* 523 */
-    padding:30px 40px 40px 40px;
+  .tabs {
     margin:40px 0 0 0;
-  }
-    #pricedata ul{
-      list-style:none;
-      padding:0;
-      margin:0;
-     }
-    #pricedata .product{
-      float:left;
-      width:330px;
-      border-bottom:1px solid #ccc;
-      padding:10px 0;
-    }
-    #pricedata .column{
-      float:right;
+    padding: 0;
+    list-style: none;
+    text-align: center;
 
-      width:330px;
+    li {
+      display: inline;
+      margin: 0;
+      padding: 0;
+      &.active a {
+        background: #fff;
+        border-bottom-color: #fff;
+
+      }
     }
-    #pricedata .column.first{
+    a {
+      border: 1px solid #e0e0e0;
+//      border-bottom-color: #e0e0e0;
+      background: #eee;
+      color: #000;
+      display: inline-block;
+      font-weight: 600;
+      padding: 10px 20px;
+      position: relative;
+      margin-bottom: -1px;
+      text-decoration: none;
+      z-index: 30;
+    }
+
+  }
+
+.pricedata {
+  @shadow: 0 2px 3px fade(#ccc, 20%); //, 0 5px 3px 0 #eee;
+  // .box-shadow(0 0 3px #ccc);
+  .box-shadow(@shadow);
+  background: #fff;
+  border: 1px solid #dedfe1;
+  width:704px; // 784
+  height:453px; // 523
+  padding:30px 40px 40px 40px;
+
+  ul{
+    list-style:none;
+    padding:0;
+    margin:0;
+   }
+
+  .column{
+    float:right;
+
+    width:330px;
+    &.first {
       float:left;
       margin-right:10px;
     }
-
-    #pricedata hgroup{
-      clear:both;
-      float:left;
-      width:330px;
+  }
+}
+.pricedata-content {
+  position: absolute;
+  top: 30px;
+  width: 704px;
+}
+  .product{
+    float:left;
+    width:330px;
+    border-bottom:1px solid #ccc;
+    padding:10px 0;
+    em{
+      width:220px; text-align:left;
     }
-    #pricedata h2{
+  }
+  .product-title{
+    clear:both;
+    float:left;
+    width:330px;
+    h2{
       font-size:18px;
       float:left;
       padding:0;margin:0;
       font-weight:normal;
     }
-    #pricedata h3{
+    h3{
       color:#fd6a00;
       font-size:20px;
       padding:0;margin:0;
@@ -418,21 +460,37 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       font-family: "facitweb-n4","facitweb",sans-serif;
       font-weight: 400;
     }
-    #pricedata em{
-      color:#949494;
-      font-size:13px;
-      display:block;
-      font-style:normal;
-      text-align:center;
-    }
-    #pricedata .product em{ width:220px; text-align:left; }
+  }
 
-    #pricedata em.note{
-      padding-top:20px;
-      clear:both;
-      width:500px;
-      margin:0 auto;
-    }
+  .product-description{
+    color:#949494;
+    font-size:13px;
+    display:block;
+    font-style:normal;
+    text-align:center;
+  }
+
+  em.note{
+    &:extend(.product-description);
+    padding-top:20px;
+    // display: block;
+    clear:both;
+    width:500px;
+    margin:0 auto;
+    // text-align: center;
+  }
+
+
+
+  /*#pricedata{
+    background:url(../img/priceblock.png) no-repeat top left;
+    width:704px; // 784
+    height:453px; // 523
+    padding:30px 40px 40px 40px;
+    margin:40px 0 0 0;
+  }
+  */
+
 
 
 /* =Producten
@@ -523,6 +581,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
         width:91px;
         height:34px;
         cursor: help;
+        margin-bottom: 15px;
       }
 
     #opening{}
@@ -532,7 +591,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       margin:0 0 5px 0;padding:0;
     }
     #opening h2{
-      margin-top:18px;
+      margin-top:0;
       margin-bottom:5px;
       font-size:18px;
     }
@@ -540,6 +599,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       font-style:normal;
       font-size:15px;
       padding: 5px;
+      margin-bottom: -7px;
       margin-left: -5px;
       margin-top: -5px;
       cursor: help;
@@ -580,16 +640,77 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
 
 
 
+// =============================================================================
+// CSS3 vendor mixins
+// - from https://github.com/twitter/bootstrap/blob/master/less/mixins.less
+// =============================================================================
 
+// Border Radius
+.border-radius(@radius) {
+  -webkit-border-radius: @radius;
+     -moz-border-radius: @radius;
+          border-radius: @radius;
+}
 
-/* ==|== media queries ======================================================
-   EXAMPLE Media Query for Responsive Design.
-   This example overrides the primary ('mobile first') styles
-   Modify as content requires.
-   ========================================================================== */
+// Drop shadows
+.box-shadow(@shadow) {
+  -webkit-box-shadow: @shadow;
+     -moz-box-shadow: @shadow;
+          box-shadow: @shadow;
+}
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+// Gradient mixin
+// Vertical - top to bottom
+.gradientvertical(@startColor: #555, @endColor: #333) {
+  background-color: mix(@startColor, @endColor, 60%);
+  background-image: -moz-linear-gradient(top, @startColor, @endColor); // FF 3.6+
+  background-image: -ms-linear-gradient(top, @startColor, @endColor); // IE10
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@startColor), to(@endColor)); // Safari 4+, Chrome 2+
+  background-image: -webkit-linear-gradient(top, @startColor, @endColor); // Safari 5.1+, Chrome 10+
+  background-image: -o-linear-gradient(top, @startColor, @endColor); // Opera 11.10
+  background-image: linear-gradient(top, @startColor, @endColor); // The standard
+  background-repeat: repeat-x;
+  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",@startColor,@endColor)); // IE9 and down
+}
+
+// Horizontal - left to right
+.gradienthorizontal(@startColor: #555, @endColor: #333) {
+  background-color: @endColor;
+  background-image: -moz-linear-gradient(left, @startColor, @endColor); // FF 3.6+
+  background-image: -ms-linear-gradient(left, @startColor, @endColor); // IE10
+  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(@startColor), to(@endColor)); // Safari 4+, Chrome 2+
+  background-image: -webkit-linear-gradient(left, @startColor, @endColor); // Safari 5.1+, Chrome 10+
+  background-image: -o-linear-gradient(left, @startColor, @endColor); // Opera 11.10
+  background-image: linear-gradient(left, @startColor, @endColor); // Le standard
+  background-repeat: repeat-x;
+  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=1)",@startColor,@endColor)); // IE9 and down
+}
+
+// Opacity
+.opacity(@opacity) {
+  opacity: @opacity / 100;
+  filter: ~"alpha(opacity=@{opacity})";
+}
+
+// Transitions
+.transition(@transition) {
+  -webkit-transition: @transition;
+     -moz-transition: @transition;
+       -o-transition: @transition;
+          transition: @transition;
+}
+
+// Retina helper
+@highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
+
+.at2x(@path, @w: auto, @h: auto) {
+  background-image: url(@path);
+  @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
+
+  @media @highdpi {
+    background-image: url("@{at2x_path}");
+    background-size: @w @h;
+  }
 }
 
 
