--- a/css/style.less
+++ b/css/style.less
@@ -16,7 +16,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
 /* =Primary styles
  ******************************************************************************/
 
-  header{
+  #top{
     background-color:#fff;
     border-top:8px solid #f1f1f1;
   }
@@ -326,7 +326,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
     position:relative;
     z-index:10;
   }
-    #overons hgroup{
+    #overons header{
       width:650px;
       margin:0 auto;
       padding-top:70px;
@@ -346,6 +346,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
       font-family: "adelle",serif;
       font-style: normal;
       font-weight: 600;
+      margin-bottom: 20px;
     }
       #overons h1 em{
         font-family: "adelle",serif;
