Sticky navigation fix, decreased fadein

--- a/css/style.less
+++ b/css/style.less
@@ -19,6 +19,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
   #top{
     background-color:#fff;
     border-top:8px solid #f1f1f1;
+    height:170px;
   }
 
   .wrap{ width:780px; margin:0 auto;}
@@ -86,7 +87,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display
   }
 
   #main.sticky{
-    margin-top:75px;
+    margin-top:54px;
   }
 
 
